--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "pdf-viewer",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://dianaleo.github.io/PDFGenerator_TodoList/",
   "dependencies": {
     "@react-pdf/renderer": "^3.1.12",
     "@testing-library/jest-dom": "^5.17.0",
@@ -24,7 +25,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy":"npm run build",
+    "deploy":"gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -45,6 +48,7 @@
     ]
   },
   "devDependencies": {
-    "@types/qrcode": "^1.5.2"
+    "@types/qrcode": "^1.5.2",
+    "gh-pages": "^6.0.0"
   }
 }
